backend/server/logs/rejections.log
[2026-02-19 13:46:53] ERROR: PrismaClientKnownRequestError: 
Invalid `prisma.user.update()` invocation in
D:\mahbub-shop\backend\server\src\socket\index.js:98:25

  95 console.log('❌ User disconnected:', socket.user.email);
  96 
  97 // Update offline status
→ 98 await prisma.user.update(
Transaction failed due to a write conflict or a deadlock. Please retry your transaction
    at $n.handleRequestError (D:\mahbub-shop\backend\server\node_modules\@prisma\client\runtime\library.js:121:7315)
    at $n.handleAndLogRequestError (D:\mahbub-shop\backend\server\node_modules\@prisma\client\runtime\library.js:121:6623)
    at $n.request (D:\mahbub-shop\backend\server\node_modules\@prisma\client\runtime\library.js:121:6307)
    at async l (D:\mahbub-shop\backend\server\node_modules\@prisma\client\runtime\library.js:130:9633)
    at async Socket.<anonymous> (D:\mahbub-shop\backend\server\src\socket\index.js:98:7)
[2026-02-19 14:02:57] ERROR: D:\mahbub-shop\backend\server\src\socket\handlers\chatHandler.js:72
const prisma = require('../../config/prisma');
      ^^^^^^

SyntaxError: Unexpected identifier 'prisma'
    at wrapSafe (node:internal/modules/cjs/loader:1691:18)
    at Module._compile (node:internal/modules/cjs/loader:1734:20)
    at Object..js (node:internal/modules/cjs/loader:1892:10)
    at Module.load (node:internal/modules/cjs/loader:1480:32)
    at Module._load (node:internal/modules/cjs/loader:1299:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:245:24)
    at Module.require (node:internal/modules/cjs/loader:1503:12)
    at require (node:internal/modules/helpers:152:16)
    at Namespace.<anonymous> (D:\mahbub-shop\backend\server\src\socket\index.js:90:5)
[2026-02-20 00:24:26] ERROR: PrismaClientKnownRequestError: 
Invalid `prisma.user.update()` invocation in
D:\mahbub-shop\backend\server\src\socket\index.js:98:25

  95 console.log('❌ User disconnected:', socket.user.email);
  96 
  97 // Update offline status
→ 98 await prisma.user.update(
Transaction failed due to a write conflict or a deadlock. Please retry your transaction
    at $n.handleRequestError (D:\mahbub-shop\backend\server\node_modules\@prisma\client\runtime\library.js:121:7315)
    at $n.handleAndLogRequestError (D:\mahbub-shop\backend\server\node_modules\@prisma\client\runtime\library.js:121:6623)
    at $n.request (D:\mahbub-shop\backend\server\node_modules\@prisma\client\runtime\library.js:121:6307)
    at async l (D:\mahbub-shop\backend\server\node_modules\@prisma\client\runtime\library.js:130:9633)
    at async Socket.<anonymous> (D:\mahbub-shop\backend\server\src\socket\index.js:98:7)
[2026-02-21 00:50:17] ERROR: unhandledRejection: Invalid image file
  No stack trace
